# sigen

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
release/: sigen
src/: args.rs  commands.rs  fileio.rs  funcs.rs  main.rs  processing.rs
src/commands/: common.rs  conv.rs  gen.rs  modurate.rs  sine.rs  taper.rs  tsp.rs  wav.rs  white.rs
src/fileio/: wavread.rs  wavwrite.rs
src/generate/: mod.rs
src/processing/: cat.rs  gen.rs
