[package]
name = "sigen"
version = "1.3.0"
edition = "2021"
authors = ["Kyoshiro Kamura <kyoshiro.kamura@gmail.com>"]
license = "GPL-2.0-only"

[[bin]]
name = "sigen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hound = "3"
indexmap = "2"
rand = "0.8"
rtaper = { git = "https://github.com/kyoush/rtaper.git", branch = "main" }
rustfft = "6"
